--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,21 +1,16 @@
 /**
- * #.# Common SCSS
- *
- * Can include things like variables and mixins
- * that are used across the project.
-*/
-/**
- * Styles
- *
- * Frontend+Backend.
+ * The following styles get applied both on the front and in the editor.
  */
+
 .wp-block-ab-animate {
-  -webkit-animation-duration: 1s;
-          animation-duration: 1s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both; }
-  .wp-block-ab-animate.ab-is-hidden {
-    opacity: 0; }
+	animation-duration: 1s;
+	-webkit-animation-fill-mode: both;
+	animation-fill-mode: both;
+
+	&.ab-is-hidden {
+		opacity: 0;
+	}
+}
 
 .wp-block-ab-animate[data-scroll-class^='fadeIn'],
 .wp-block-ab-animate[data-scroll-class^='bounceIn'],
@@ -24,7 +19,9 @@
 .wp-block-ab-animate[data-scroll-class^='zoomIn'],
 .wp-block-ab-animate[data-scroll-class='rollIn'],
 .wp-block-ab-animate[data-scroll-class='jackInTheBox'] {
-  opacity: 0; }
+	opacity: 0;
+}
 
 .wp-block-ab-animate.ab-is-hidden.ab-animation-end {
-  opacity: 1; }
+	opacity: 1;
+}
